// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`covid data All covid measures 1`] = `
Object {
  "data": Object {
    "root": Object {
      "covid_measures": Array [
        Object {
          "covid_estimates": Array [
            Object {
              "est_doc": "ME",
              "fiscal_year": "2020",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": 133,
              "stat": 0,
              "vote": 999,
            },
            Object {
              "est_doc": "SEA",
              "fiscal_year": "2020",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": 133,
              "stat": 0,
              "vote": 9,
            },
            Object {
              "est_doc": "SEB",
              "fiscal_year": "2020",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": 133,
              "stat": 9,
              "vote": 9,
            },
            Object {
              "est_doc": "ME",
              "fiscal_year": "2020",
              "org": Object {
                "id": "326",
                "name": "Treasury Board of Canada Secretariat",
              },
              "org_id": 326,
              "stat": 999,
              "vote": 0,
            },
            Object {
              "est_doc": "ME",
              "fiscal_year": "2021",
              "org": Object {
                "id": "326",
                "name": "Treasury Board of Canada Secretariat",
              },
              "org_id": 326,
              "stat": 999,
              "vote": 0,
            },
            Object {
              "est_doc": "SEB",
              "fiscal_year": "2020",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": 552,
              "stat": 0,
              "vote": 9,
            },
          ],
          "id": "COV001",
          "name": "measure 1",
        },
        Object {
          "covid_estimates": Array [
            Object {
              "est_doc": "ME",
              "fiscal_year": "2020",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": 133,
              "stat": 8,
              "vote": 99,
            },
            Object {
              "est_doc": "SEA",
              "fiscal_year": "2020",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": 552,
              "stat": 99,
              "vote": 99,
            },
            Object {
              "est_doc": "SEB",
              "fiscal_year": "2020",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": 552,
              "stat": 9,
              "vote": 9,
            },
            Object {
              "est_doc": "SEC",
              "fiscal_year": "2020",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": 552,
              "stat": 9,
              "vote": 0,
            },
            Object {
              "est_doc": "SEC",
              "fiscal_year": "2021",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": 552,
              "stat": 9,
              "vote": 0,
            },
          ],
          "id": "COV002",
          "name": "measure 2",
        },
        Object {
          "covid_estimates": Array [
            Object {
              "est_doc": "ME",
              "fiscal_year": "2020",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": 133,
              "stat": 0,
              "vote": 9,
            },
            Object {
              "est_doc": "ME",
              "fiscal_year": "2021",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": 133,
              "stat": 0,
              "vote": 9,
            },
            Object {
              "est_doc": "SEA",
              "fiscal_year": "2020",
              "org": Object {
                "id": "326",
                "name": "Treasury Board of Canada Secretariat",
              },
              "org_id": 326,
              "stat": 9,
              "vote": 99,
            },
          ],
          "id": "COV003",
          "name": "measure 3",
        },
      ],
    },
  },
}
`;

exports[`covid data Gov covid estimates summary 1`] = `
Object {
  "data": Object {
    "root": Object {
      "gov": Object {
        "covid_estimates_summary": Array [
          Object {
            "est_doc": "ME",
            "fiscal_year": "2020",
            "stat": 1007,
            "vote": 1107,
          },
          Object {
            "est_doc": "SEA",
            "fiscal_year": "2020",
            "stat": 108,
            "vote": 207,
          },
          Object {
            "est_doc": "SEB",
            "fiscal_year": "2020",
            "stat": 18,
            "vote": 27,
          },
          Object {
            "est_doc": "SEC",
            "fiscal_year": "2020",
            "stat": 9,
            "vote": 0,
          },
          Object {
            "est_doc": "ME",
            "fiscal_year": "2021",
            "stat": 999,
            "vote": 9,
          },
          Object {
            "est_doc": "SEC",
            "fiscal_year": "2021",
            "stat": 9,
            "vote": 0,
          },
        ],
      },
    },
  },
}
`;

exports[`covid data Org covid estimates summary 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "covid_estimates_summary": Array [
          Object {
            "est_doc": "ME",
            "fiscal_year": "2020",
            "stat": 8,
            "vote": 1107,
          },
          Object {
            "est_doc": "SEA",
            "fiscal_year": "2020",
            "stat": 0,
            "vote": 9,
          },
          Object {
            "est_doc": "SEB",
            "fiscal_year": "2020",
            "stat": 9,
            "vote": 9,
          },
          Object {
            "est_doc": "ME",
            "fiscal_year": "2021",
            "stat": 0,
            "vote": 9,
          },
        ],
      },
    },
  },
}
`;

exports[`covid data Org covid measures 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "covid_measures": Array [
          Object {
            "covid_estimates": Array [
              Object {
                "est_doc": "ME",
                "fiscal_year": "2020",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": 133,
                "stat": 0,
                "vote": 999,
              },
              Object {
                "est_doc": "SEA",
                "fiscal_year": "2020",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": 133,
                "stat": 0,
                "vote": 9,
              },
              Object {
                "est_doc": "SEB",
                "fiscal_year": "2020",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": 133,
                "stat": 9,
                "vote": 9,
              },
            ],
            "id": "COV001",
            "name": "measure 1",
          },
          Object {
            "covid_estimates": Array [
              Object {
                "est_doc": "ME",
                "fiscal_year": "2020",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": 133,
                "stat": 8,
                "vote": 99,
              },
            ],
            "id": "COV002",
            "name": "measure 2",
          },
          Object {
            "covid_estimates": Array [
              Object {
                "est_doc": "ME",
                "fiscal_year": "2020",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": 133,
                "stat": 0,
                "vote": 9,
              },
              Object {
                "est_doc": "ME",
                "fiscal_year": "2021",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": 133,
                "stat": 0,
                "vote": 9,
              },
            ],
            "id": "COV003",
            "name": "measure 3",
          },
        ],
      },
    },
  },
}
`;

exports[`covid data Org has covid data 1`] = `
Object {
  "data": Object {
    "root": Object {
      "does_not_have_Data": Object {
        "has_covid_data": false,
      },
      "has_data": Object {
        "has_covid_data": true,
      },
    },
  },
}
`;

exports[`covid data Specific covid measure 1`] = `
Object {
  "data": Object {
    "root": Object {
      "covid_measure": Object {
        "id": "COV001",
        "name": "measure 1",
      },
    },
  },
}
`;
